// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSelectControl renders options 1`] = `
<div>
  <div
    class="wcpay components-custom-select-control onboarding-select-control"
  >
    <label
      class="components-custom-select-control__label"
      for="downshift-0-toggle-button"
      id="downshift-0-label"
    >
      Favourite fruit
    </label>
    <button
      aria-describedby="Currently selected: Pineapple"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Favourite fruit"
      class="components-button components-custom-select-control__button"
      id="downshift-0-toggle-button"
      type="button"
    >
      Pineapple
      <svg
        aria-hidden="true"
        class="components-custom-select-control__button-icon"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
        />
      </svg>
    </button>
    <ul
      aria-activedescendant="downshift-0-item-0"
      aria-hidden="false"
      aria-labelledby="downshift-0-label"
      class="components-custom-select-control__menu"
      id="downshift-0-menu"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="components-custom-select-control__item is-highlighted"
        id="downshift-0-item-0"
        role="option"
      >
        Pineapple
        <svg
          aria-hidden="true"
          class="components-custom-select-control__item-icon"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.3 5.6L9.9 16.9l-4.6-3.4-.9 1.2 5.8 4.3 9.3-12.6z"
          />
        </svg>
      </li>
      <li
        aria-selected="false"
        class="components-custom-select-control__item"
        id="downshift-0-item-1"
        role="option"
      >
        Mango
      </li>
      <li
        aria-selected="false"
        class="components-custom-select-control__item"
        id="downshift-0-item-2"
        role="option"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`CustomSelectControl renders options with custom children 1`] = `
<div>
  <div
    class="wcpay components-custom-select-control onboarding-select-control"
  >
    <label
      class="components-custom-select-control__label"
      for="downshift-2-toggle-button"
      id="downshift-2-label"
    >
      Favourite fruit
    </label>
    <button
      aria-describedby="Currently selected: Pineapple"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Favourite fruit"
      class="components-button components-custom-select-control__button"
      id="downshift-2-toggle-button"
      type="button"
    >
      Pineapple
      <svg
        aria-hidden="true"
        class="components-custom-select-control__button-icon"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
        />
      </svg>
    </button>
    <ul
      aria-activedescendant="downshift-2-item-0"
      aria-hidden="false"
      aria-labelledby="downshift-2-label"
      class="components-custom-select-control__menu"
      id="downshift-2-menu"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="components-custom-select-control__item is-highlighted"
        id="downshift-2-item-0"
        role="option"
      >
        <span>
          🍍
        </span>
        <span>
          Pineapple
        </span>
        <svg
          aria-hidden="true"
          class="components-custom-select-control__item-icon"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.3 5.6L9.9 16.9l-4.6-3.4-.9 1.2 5.8 4.3 9.3-12.6z"
          />
        </svg>
      </li>
      <li
        aria-selected="false"
        class="components-custom-select-control__item"
        id="downshift-2-item-1"
        role="option"
      >
        <span>
          🥭
        </span>
        <span>
          Mango
        </span>
      </li>
      <li
        aria-selected="false"
        class="components-custom-select-control__item"
        id="downshift-2-item-2"
        role="option"
      >
        <span>
          🍊
        </span>
        <span>
          Orange
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CustomSelectControl renders with placeholder 1`] = `
<div>
  <div
    class="wcpay components-custom-select-control onboarding-select-control"
  >
    <label
      class="components-custom-select-control__label"
      for="downshift-4-toggle-button"
      id="downshift-4-label"
    >
      Favourite fruit
    </label>
    <button
      aria-describedby="No selection"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Favourite fruit"
      class="components-button components-custom-select-control__button placeholder"
      id="downshift-4-toggle-button"
      type="button"
    >
      Which fruit do you like best?
      <svg
        aria-hidden="true"
        class="components-custom-select-control__button-icon"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
        />
      </svg>
    </button>
    <ul
      aria-hidden="true"
      aria-labelledby="downshift-4-label"
      class="components-custom-select-control__menu"
      id="downshift-4-menu"
      role="listbox"
      tabindex="-1"
    />
  </div>
</div>
`;
